<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_snail"
    android:layout_weight="1"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.talk.snaily.MainActivity"
    tools:showIn="@layout/app_bar_main">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:orientation="vertical"

            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/snail_talk_big"
                android:padding="5dp"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:orientation="vertical"


            >
            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="5dp"
                android:background="@color/color_white"
                android:hint="@string/snail_name"
                android:textSize="25sp"
                android:textColorHint="@color/color_snail"
                android:singleLine="true"
                android:imeOptions="actionNext"

                />

            <EditText
                android:id="@+id/pass_word"
                android:singleLine="true"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="20dp"
                android:background="@color/color_white"
                android:hint="@string/password"
                android:textColorHint="@color/color_snail"
                android:textSize="25sp"
                android:imeOptions="actionGo"
                />
            <TextView
                android:id="@+id/forget_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:textColor="@color/color_white"


                />

            <Button
                android:id="@+id/log_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/log_in"
                android:textSize="26sp"
                android:textColor="@color/color_white"
                android:background="@drawable/botton_stroke"

                />
            <Button
                android:id="@+id/log_in_fb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"

                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="20dp"
                android:text="Log in with Facebook"
                android:textSize="26sp"
                android:textColor="@color/color_white"
                android:background="@color/color_fb"
                android:textAllCaps="false"

                />
            <Button
                android:id="@+id/log_in_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:text="Log in with Google +"
                android:textSize="26sp"
                android:textColor="@color/color_white"
                android:background="@color/color_googlePlus"
                android:textAllCaps="false"

                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:orientation="vertical"

            >


            <Button
                android:id="@+id/create_acc_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_acc"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:padding="8dp"
                android:background="@drawable/botton_stroke"
                android:textColor="@color/color_white"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="5dp"


                />
        </LinearLayout>




    </LinearLayout>
